--- a/microservices/Gateway.WebApi/Gateway.WebApi.csproj
+++ b/microservices/Gateway.WebApi/Gateway.WebApi.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MMLib.SwaggerForOcelot" Version="1.9.0" />
     <PackageReference Include="Ocelot" Version="15.0.7" />
     <PackageReference Include="Ocelot.Cache.CacheManager" Version="15.0.7" />
   </ItemGroup>
