--- a/microservices/Gateway.WebApi/Gateway.WebApi.csproj
+++ b/microservices/Gateway.WebApi/Gateway.WebApi.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MMLib.SwaggerForOcelot" Version="3.2.1" />
     <PackageReference Include="Ocelot" Version="16.0.1" />
     <PackageReference Include="Ocelot.Cache.CacheManager" Version="16.0.1" />
     <PackageReference Include="Ocelot.Provider.Consul" Version="15.0.6" />
