--- a/microservices/src/Services/Customer.WebApi/appsettings.json
+++ b/microservices/src/Services/Customer.WebApi/appsettings.json
@@ -1,13 +1,12 @@
 {
   "ConnectionStrings": {
     "SqlServerConnection": "Data Source=SQL5080.site4now.net;Initial Catalog=db_a77fd7_oladapo;Persist Security Info=True;User ID=db_a77fd7_oladapo_admin;Password=Folorunsho12!",
-    "WemaApi": "https://wema-alatdev-apimgt.azure-api.net/alat-test/api/Shared/GetAllBanks"
-
+ 
   },
   "ApplicationInsights": {
     "InstrumentationKey": "< App Insight Instrumentation Key>"
   },
-  "SmsSettings": {
+  "Settings": {
     "XRapidAPIKey": "58642898a0msh7314d3c73b64808p135bb2jsn93c4eec8be63",
     "XRapidAPIHost": "afilnet-sms.p.rapidapi.com",
     "RequestUri": "https://afilnet-sms.p.rapidapi.com",
@@ -17,7 +16,9 @@
     "sms": "oladapo",
     "method": "sendsms",
     "classvalue": "sms",
-    "password": "oladapo"
+    "password": "oladapo",
+    "BaseUrl": "https://wema-alatdev-apimgt.azure-api.net",
+    "Endpoint": "/alat-test/api/Shared/GetAllBanks"
   },
   "Logging": {
     "LogLevel": {
