--- a/microservices/src/Services/Customer.WebApi/appsettings.json
+++ b/microservices/src/Services/Customer.WebApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "SqlServerConnection": "Data Source=SQL5080.site4now.net;Initial Catalog=db_a77fd7_oladapo;Persist Security Info=True;User ID=db_a77fd7_oladapo_admin;Password=Folorunsho12!",
- 
+    "SqlServerConnection": "Data Source=SQL5053.site4now.net;Initial Catalog=db_a8aeca_wema;Persist Security Info=True;User ID=db_a8aeca_wema_admin;Password=Folorunsho11!"
+
   },
   "ApplicationInsights": {
     "InstrumentationKey": "< App Insight Instrumentation Key>"
